--- a/docs/about.tex
+++ b/docs/about.tex
@@ -32,7 +32,7 @@ Każdy z serwomotorów ma także wbudowany enkoder umożliwiający pomiar rzeczy
 
 \begin{figure}[H]
 \centering
- \includegraphics[width=0.8\textwidth]{graphics/kuka_youbot.png}
+ \includegraphics[width=0.5\textwidth]{graphics/kuka_youbot.png}
 \caption{Przykład prawidłowej platformy wielokierunkowej na podstawie fragmentu komercyjnego robota Kuka Youbot. Należy zwrócić uwagę na charakterystyczne ustawienie kół względem siebie.}
 \end{figure} 
 
@@ -43,7 +43,7 @@ A jeśli do tego dodamy obrót kół drugiej przekątnej w odwrotnym kierunku, w
 
 \begin{figure}[H]
 \centering
- \includegraphics[width=\textwidth]{graphics/mecanum_dirs.pdf}
+ \includegraphics[width=0.8\textwidth]{graphics/mecanum_dirs.pdf}
 \caption{Podstawowe ruchy, jakie może wykonywać robot o napędzie wielokierunkowym.}
 \end{figure} 
 
@@ -110,7 +110,7 @@ Doskonałym przykładem jest tutaj kamera Kinect, w której to zachodzi odczytan
 %TODO Zmienić na Tikz
 \begin{figure}[H]
 \centering
- \includegraphics[width=0.8\textwidth]{graphics/agent.pdf}
+ \includegraphics[width=0.5\textwidth]{graphics/agent.pdf}
 \caption{Struktura agenta upostaciowionego.}
 \end{figure} 
 
