--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -15,6 +15,6 @@ Strona internetowa symulatora V-Rep.
 
 \bibitem{ros_website}
 Strona internetowa platformy programistycznej \emph{Robot Operating System}.
-/url{http://www.ros.org}
+\url{http://www.ros.org}
 
 \end{thebibliography}
