Dodaj koła wirtualne

--- a/models/omnivelma/readme
+++ b/models/omnivelma/readme
@@ -1,2 +1,6 @@
 Siatki:
 Każda siatka ma środek układu współrzędnych w swoim środku i jest przesunięta względem środka podstawy.
+
+Przeguby:
+Zawias na środku.
+Zawias przy każdym kole.
