Dodaj zarys skryptu

--- a/models/omnivelma/readme
+++ b/models/omnivelma/readme
@@ -4,3 +4,4 @@ Każda siatka ma środek układu współrzędnych w swoim środku i jest przesun
 Przeguby:
 Zawias na środku.
 Zawias przy każdym kole.
+Zawiasy krzywe ustawiane sztucznie po każdej klatce.
