Dodaj wstęp do modelu

--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -1,9 +1,15 @@
 \begin{thebibliography}{0}
 
+% stosowanie_modelu.pdf
 \bibitem{kinematic_modeling}
- P. Muir, C. Neuman “Kinematic modeling for feedback control of an
-omnidirectional wheeled mobile robot”, Proceedings, IEEE International
-Conference in Robotics and Automation, Vol 4. pp. 1772-1778, 1987.
+ P. Muir, C. Neuman ``Kinematic modeling for feedback control of an omnidirectional wheeled mobile robot'', 
+ Proceedings, IEEE International Conference in Robotics and Automation, 
+ Vol 4. pp. 1772-1778, 1987.
+
+% koła.pdf
+\bibitem{wheels}
+Mihai Olimpiu Tătar, Cătălin Popovici, Dan Mândru, Ioan Ardelean, Alin Pleşa ``Design and development of an autonomous omni-directional mobile robot with Mecanum wheels'',
+Conference: 2014 IEEE International Conference on Automation, Quality and Testing, Robotics (AQTR)
 
 \bibitem{gazebo_website}
 Strona internetowa symulatora Gazebo.
