--- a/docs/main.tex
+++ b/docs/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{report}
+\documentclass[a4paper,12pt]{report}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{wrapfig}
@@ -18,5 +18,6 @@
 \tableofcontents
 
 \input{about.tex}
+\input{model.tex}
 \input{bibliography.tex}
 \end{document} 
