Dodaj więcej info

--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -23,4 +23,8 @@ Strona internetowa symulatora V-Rep.
 Strona internetowa platformy programistycznej \emph{Robot Operating System}.
 \url{http://www.ros.org}
 
+\bibitem{sdf_website}
+Strona internetowa standardu SDF.
+\url{http://sdformat.org/spec}
+
 \end{thebibliography}
