Dodaj ustawianie tarcia Omnivelmy

--- a/docs/model.tex
+++ b/docs/model.tex
@@ -21,7 +21,7 @@ $\omega_z$ & & Prędkość kątowa w osi Z, wektor skierowany w górę. \\
 \end{tabular}
 
 \section{Sposób zapisu w formacie SDF}
-SDF jest formatem XML pozwalającym na określenie elementów i zależności pomiędzy nimi w przestrzeni trójwymiarowej, w szczególności budowy i rozmieszczenia robotów.
+\emph{Simulation Description Format} (SDF) jest formatem XML pozwalającym na określenie elementów i zależności pomiędzy nimi w przestrzeni trójwymiarowej, w szczególności budowy i rozmieszczenia robotów.
 Powstał jako zamiennik URDF ze względu na jego skomplikowaną semantykę i brak możliwości określania ważnych cech, jak rozmieszczenia elementów na symulowanej scenie, określania materiałów itp.
 
 W przeciwieństwie do poprzednika zapisującego model w przestrzeni drzewiastej, SDF równolegle określa wszystkie składowe modelu, oraz zależności między nimi, jak więzy i względne pozycje.
