--- a/docs/readme
+++ b/docs/readme
@@ -1,9 +1,7 @@
 Pliki źródłowe PDFa.
 
 Do poruszenia:
-Działanie ROSa.
-Nowe zdjęcie i opis platformy.
-Plan działania (zaawansowane sterowanie, wyjście, QT, V-REP).
+Opis platformy (wymiary itp)
 
 Do zrobienia:
 Enkodery omnivelmy.
